<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@android:color/transparent"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_current_weather_back"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtTitleAir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/f_entry_details_air_data"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/viewAir"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="5dp">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:background="@android:color/holo_green_light"
                            android:text="25"
                            android:textAlignment="center"
                            android:textSize="36sp" />
                    </android.support.v7.widget.CardView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="12sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtPm25lit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/pm25aqi"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtPm25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtPm10lit2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/pm10aqi"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtPm10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtO3lit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/o3aqi"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtO3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"

                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtNO2lit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/no2aqi"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtNO2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtSO2lit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/so2aqi"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtSO2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtTempLit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/temperatureShort"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtTemp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"

                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtPressureLit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/pressure"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtPressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:gravity="end"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtHumidityLit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:gravity="start"
                                android:text="@string/humidity"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/txtHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="0.4"
                                android:text="119"
                                android:textAlignment="textEnd" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAirQualityDamageDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution."
                        android:textSize="12sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginLeft="5sp"
                        android:layout_marginRight="5sp"
                        android:background="@drawable/dash_line"
                        android:layerType="software" />

                    <TextView
                        android:id="@+id/txtAirQualityRecomDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion."
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>