<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_current_weather_back"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtTitleSun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/f_entry_details_sun_data"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view22"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:background="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:baselineAligned="false">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/cell_shape"
                    android:weightSum="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="0dp"
                            android:layout_height="20sp"
                            android:layout_weight="0.2"
                            android:scaleType="centerInside"
                            android:src="@mipmap/filled_circle_green_64"
                            android:contentDescription="Green dot" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:gravity="center_vertical"
                            android:text="@string/uvLow"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center_vertical"
                            android:text="\u003c 0-2"
                            android:textAlignment="center" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="0dp"
                            android:layout_height="20sp"
                            android:layout_weight="0.2"
                            android:scaleType="centerInside"
                            android:src="@mipmap/filled_circle_yellow_64"
                            android:contentDescription="Yellow dot"/>

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:gravity="center_vertical"
                            android:text="@string/uvModerate"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="3-5"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="0dp"
                            android:layout_height="20sp"
                            android:layout_weight="0.2"
                            android:scaleType="centerInside"
                            android:src="@mipmap/filled_circle_orange_64"
                            android:contentDescription="Orange dot" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:gravity="center_vertical"
                            android:text="@string/uvHigh"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="6-7"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="0dp"
                            android:layout_height="20sp"
                            android:layout_weight="0.2"
                            android:scaleType="centerInside"
                            android:src="@mipmap/filled_circle_red_64"
                            android:contentDescription="Red dot"/>

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:gravity="center_vertical"
                            android:text="@string/uvVeryHigh"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="8-10"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="0dp"
                            android:layout_height="20sp"
                            android:layout_weight="0.2"
                            android:scaleType="centerInside"
                            android:src="@mipmap/filled_circle_purple_64"
                            android:contentDescription="Purple dot"/>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:gravity="center_vertical"
                            android:text="@string/uvExtremelyHigh"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="\u003e 11"
                            android:textAlignment="center" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtUvIndexLit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uvIndex"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtUvIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="0"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="@+id/txtHoraMaxUv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:id="@+id/txtHoraMaxUvLit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/uvMaxHour"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txtHoraMaxUv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center_vertical"
                        android:text="TextView"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@mipmap/icons8_sunrise_80"
                        android:contentDescription="Sunrise Icon" />

                    <ImageView
                        android:id="@+id/imgSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@mipmap/icons8_sunset_80"
                        android:contentDescription="Sunset icon" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="12sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/txtSunriseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtSunsetTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="TextView"
                        android:textAlignment="center" />
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>